--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include ':k9mail-library'
 include ':plugins:Android-PullToRefresh:library'
 include ':plugins:HoloColorPicker'
 include ':plugins:openpgp-api-library'
+include ':plugins:smime'
 include ':tests-on-jvm'
