--- a/k9mail/build.gradle
+++ b/k9mail/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile project(':plugins:Android-PullToRefresh:library')
     compile project(':plugins:HoloColorPicker')
     compile project(':plugins:openpgp-api-library')
+//    compile project(':plugins:smime')
     compile 'commons-io:commons-io:2.4'
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:support-v13:21.0.2'
