--- a/plugins/smime/build.gradle
+++ b/plugins/smime/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
@@ -16,6 +15,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+repositories {
+    maven { url 'http://repo2.maven.org/maven2/org/bouncycastle' }
 }
 
 dependencies {
