--- a/plugins/smime/build.gradle
+++ b/plugins/smime/build.gradle
@@ -28,4 +28,5 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.bouncycastle:bcmail-jdk15on:1.51'
+    compile 'javax.mail:mail:1.5.0-b01'
 }
