--- a/plugins/smime/build.gradle
+++ b/plugins/smime/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/mail.jar')
+    compile project(':k9mail-library')
 }
